Replace java globbing with ant-style globbing again
Java globbing uses an uncommon syntax for 0-n directory hierarchies:
  **.properties
instead of the more common
  **/*.properties
Also it doesn't detect if equivalent paths are the same due to some
indirection.
Therefore plexus-utils is used again to do the matching againts
patterns. A bit custom logic around that allows normalization of patterns
and paths and specifying patterns either as absolute paths or as
relative to the propertyRootDirectory.

--- a/kilt-example/README.adoc
+++ b/kilt-example/README.adoc
@@ -47,7 +47,7 @@ our link:pom.xml[].
         <version>${project.version}</version>
         <configuration>
           <!-- Specify which files we want to cover with Kilt -->
-          <i18nIncludes>i18n/**.properties</i18nIncludes>             <!--1-->
+          <i18nIncludes>i18n/**/*.properties</i18nIncludes>           <!--1-->
           <i18nExcludes>i18n/nongenerated*.properties</i18nExcludes>  <!--2-->
           <!-- even though we use Java 8 we store our .properties files in
                UTF-8 format -->
