Descibe new ant prerequisites
Ant versions < 1.10.6 don't correctly use multi release jars.
It throws the following error:

 [reformat] WARNING: sun.reflect.Reflection.getCallerClass is not supported. This will impact performance.
 java.lang.UnsupportedOperationException: No class provided, and an appropriate one cannot be found.

This error is coming from log4j. See https://stackoverflow.com/questions/52953483

Actually we don't use shaded jars, but the error still happens. Ant
doesn't correctly handle multi release jars. See https://issues.openbravo.com/view.php?id=39663

The problem can be levaraged by exporting ANT_OPTS="-Djdk.util.jar.enableMultiRelease=force"
or using ant >= 1.10.6.

--- a/README.adoc
+++ b/README.adoc
@@ -85,7 +85,15 @@ Prerequisites
 
 === To be integrated into an ant build script
 
+When using Java 8 to 10:
+
  - Apache ant 1.8.1 or higher
+
+When using Java 11+:
+
+ - Apache ant 1.10.6 or higher footnote:[Older version of ant can be used
+   by exporting the environment variable `ANT_OPTS="-Djdk.util.jar.enableMultiRelease=force"`]
+
 
 === To be integrated into a maven build
 
