--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -14,11 +14,11 @@ Marco Herrn <marco@mherrn.de>
 :license-link: ../LICENSE.txt
 :kilt-version: 0.3.0
 
-User Guide for Kilt (**K**een **I**18n **L**10n and **I**9n)
+User Guide for Kilt (**K**ilt **I**18n **L**10n and **I**9n)
 
 Create an XLS(X) sheet from Java localization resource bundles and vice versa.
 
-image::kilt-icon.svg[Kilt - **K**een **I**18n, **L**10n and **T**9n, width=100]
+image::kilt-icon.svg[Kilt - **K**ilt **I**18n, **L**10n and **T**9n, width=100]
 
 
 Introduction
