Do not print author and email in user guide
It is not possible to suppress these when generating the HTML output
with asciidoctor. Therefore they are removed from the source document.
Also the revision date doesn't have any meaning, therefore it was
removed, too.

--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -1,7 +1,7 @@
 User Guide
 ==========
-Marco Herrn <marco@mherrn.de>
-2018-08-03
+//Marco Herrn <marco@mherrn.de>
+//2018-08-03
 :compat-mode!:
 :toc: left
 :toclevels: 4
