--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -15,6 +15,9 @@ User Guide
 :license-link: ../LICENSE.txt
 :kilt-version: 1.0.0
 
+[link=https://github.com/hupfdule/kilt]
+image::https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png[Fork me on GitHub,float="right"]
+
 User Guide for Kilt (**K**ilt **I**18n **L**10n and **I**9n)
 
 Create an XLS(X) sheet from Java localization resource bundles and vice versa.
