--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -17,6 +17,9 @@ User Guide
 
 [link=https://github.com/hupfdule/kilt]
 image::https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png[Fork me on GitHub,float="right"]
+++++
+<iframe src="https://ghbtns.com/github-btn.html?user=hupfdule&repo=kilt&type=star&count=false" frameborder="0" scrolling="0" width="170px" height="20px" style="float:right"></iframe>
+++++
 
 User Guide for Kilt (**K**ilt **I**18n **L**10n and **I**9n)
 
